fix(vnavigationdrawer): change closed navigation drawer visibility
fix #10821

--- a/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
+++ b/packages/vuetify/src/components/VNavigationDrawer/VNavigationDrawer.sass
@@ -119,6 +119,9 @@
 .v-navigation-drawer--mobile
   z-index: 6
 
+.v-navigation-drawer--close
+  visibility: hidden
+
 .v-navigation-drawer--is-mobile,
 .v-navigation-drawer--temporary
   &:not(.v-navigation-drawer--close)
